docs: :memo: added some more content for translation

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -20,6 +20,8 @@
     "After practicing, you should try some amazing Quiz and test yourself": "After practicing, you should try some amazing Quiz and test yourself",
     "And from the leaderboard, you can see your rank in this learning journey": "And from the leaderboard, you can see your rank in this learning journey",
     "Lastly!": "Lastly!",
-    "Learn and grow! Wish you luck!": "Learn and grow! Wish you luck!"
+    "Learn and grow! Wish you luck!": "Learn and grow! Wish you luck!",
+    "Select your proficient language":"Select your proficient language",
+    "You have selected English":"You have selected English"
   }
   
