docs: :memo: added some more content for translation

--- a/frontend/public/locales/maithili/translation.json
+++ b/frontend/public/locales/maithili/translation.json
@@ -20,6 +20,8 @@
     "After practicing, you should try some amazing Quiz and test yourself": "प्रैक्टिस करीं के कुछ आद्भुत क्विज कोशिस करैं अर खुद को टेस्ट करैं",
     "And from the leaderboard, you can see your rank in this learning journey": "र लीडरबोर्ड से तुमको स्थान देखैं सकईं बाटें इ सिखवन यात्रा में",
     "Lastly!": "अंत में!",
-    "Learn and grow! Wish you luck!": "सिखैं अर बढ़ैं! तुमको भाग्य चाहैं!"
+    "Learn and grow! Wish you luck!": "सिखैं अर बढ़ैं! तुमको भाग्य चाहैं!",
+    "Select your proficient language":"अपन प्रवीण भाषा चुनू",
+    "You have selected English":"अहाँ मैथिली चुनने छी"
   }
   
