docs: :memo: added some more content for translation in nepali

--- a/frontend/public/locales/nep/translation.json
+++ b/frontend/public/locales/nep/translation.json
@@ -20,6 +20,9 @@
     "After practicing, you should try some amazing Quiz and test yourself": "अभ्यास पछि तपाईंले केही अद्भुत क्विजहरू प्रयास गर्नुपर्छ र आफैलाई परीक्षण गर्नुपर्छ",
     "And from the leaderboard, you can see your rank in this learning journey": "र अगुवा बोर्डबाट तपाईंले यस शिक्षामा आफ्नो स्तर देख्न सक्नुहुन्छ यात्रा!",
     "Lastly!": "अन्तमा!",
-    "Learn and grow! Wish you luck!": "सिक्नुहोस् र बढ्नुहोस्! तपाईलाई शुभकामना!"
+    "Learn and grow! Wish you luck!": "सिक्नुहोस् र बढ्नुहोस्! तपाईलाई शुभकामना!",
+    "Select your proficient language":"आफ्नो कुशल भाषा चयन गर्नुहोस्",
+    "You have selected English":"नेपाली छनोट गर्नुभयो"
+
   }
   
