docs: :memo: adding some more content for translation purpose

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -22,6 +22,7 @@
     "Lastly!": "Lastly!",
     "Learn and grow! Wish you luck!": "Learn and grow! Wish you luck!",
     "Select your proficient language":"Select your proficient language",
-    "You have selected English":"You have selected English"
+    "You have selected English":"You have selected English",
+    "Select the language you want to learn":"Select the language you want to learn"
   }
   
