--- a/frontend/public/locales/maithili/translation.json
+++ b/frontend/public/locales/maithili/translation.json
@@ -22,6 +22,7 @@
     "Lastly!": "अंत में!",
     "Learn and grow! Wish you luck!": "सिखैं अर बढ़ैं! तुमको भाग्य चाहैं!",
     "Select your proficient language":"अपन प्रवीण भाषा चुनू",
-    "You have selected English":"अहाँ मैथिली चुनने छी"
+    "You have selected English":"अहाँ मैथिली चुनने छी",
+    "Select the language you want to learn":"जे भाषा सीखय चाहैत छी से चुनू"
   }
   
