--- a/frontend/public/locales/nep/translation.json
+++ b/frontend/public/locales/nep/translation.json
@@ -22,7 +22,8 @@
     "Lastly!": "अन्तमा!",
     "Learn and grow! Wish you luck!": "सिक्नुहोस् र बढ्नुहोस्! तपाईलाई शुभकामना!",
     "Select your proficient language":"आफ्नो कुशल भाषा चयन गर्नुहोस्",
-    "You have selected English":"नेपाली छनोट गर्नुभयो"
+    "You have selected English":"नेपाली छनोट गर्नुभयो",
+    "Select the language you want to learn":"तपाईंले सिक्न चाहेको भाषा चयन गर्नुहोस्"
 
   }
   
